syntax = "proto3";

option java_multiple_files = false;
option java_outer_classname = "Hello";

package com.examples.grpc;

service HelloService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc LotsOfResponse(HelloRequest) returns(stream HelloResponse);
  rpc BidiHello(stream HelloRequest) returns(stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string hello = 1;
}

